# nbmanips

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  codecov.yml  hatch.toml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: linting.yml  precommit.yml  publish.yml  tests.yml
nbmanips/: __init__.py  __main__.py  cell.py  cell_output.py  cell_utils.py  color.py  exporters.py  io.py  notebook.py  notebook_base.py  notebook_mixins.py  selector.py  utils.py
nbmanips/cell/: __init__.py  cell_output.py  cell_utils.py  cells.py  color.py  output_parsers.py
nbmanips/cli/: __init__.py  collection.py  convert.py  explore.py  select.py  transform.py
nbmanips/notebook/: __init__.py  notebook.py  notebook_base.py  notebook_mixins.py  utils.py
nbmanips/selector/: __init__.py  base_selectors.py  callable_selector.py  default_selector.py  index_selector.py  slice_selector.py
src/nbmanips/: __init__.py  __main__.py  _utils.py  exporters.py
src/nbmanips/cell/: __init__.py  cell_output.py  cell_utils.py  cells.py  color.py  output_parsers.py
src/nbmanips/cli/: __init__.py  collection.py  convert.py  explore.py  select.py  transform.py
src/nbmanips/notebook/: __init__.py  dbc.py  ipynb.py  notebook.py  notebook_base.py  notebook_mixins.py  utils.py  zpln.py
src/nbmanips/selector/: __init__.py  base_selectors.py  callable_selector.py  default_selector.py  index_selector.py  slice_selector.py
tests/: conftest.py  tes_cli.py  test_cli.py  test_exports.py  test_nbmanips.py  test_selectors.py
tests/test_files/: nb1.ipynb  nb2.ipynb  nb3.ipynb  nb5.ipynb  nb6.ipynb  nb7.ipynb
