[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.black]
line-length = 88
target-version = ['py38']
skip-string-normalization = true

[tool.isort]
line_length = 88
profile = "black"

[tool.mypy]
exclude = [
    '/notebook/utils\.py',
]
